# clean-axum-api

./: .env  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  Readme.md  Rocket.toml  clippy.toml  docker-compose.yml  flake.nix  flake2.nix
.cargo/: config.toml
.github/workflows/: build-validation.yml  deploy-api.yml
.sqlx/: query-5a8ff559a949846cb001d63c164b29ed62369497b9314975120c5393e5318ffc.json  query-bf9525bc0afa87a71f34a369af5f4d939d76341360b4e6b311e2503f674cb6af.json  query-e3070e19eda1b5178e497eae3c2f6b4158962cfa144ff2626373fea2eb3bd700.json  query-f51a8a0311045375c04245e6d85151a6e1661f3108fa75625eaabc120b716458.json  query-f5856c6cb96c561555a7853e30eb12f0ece2e782bb7b0bb30687b5404f57f9a5.json
api/: Cargo.toml
api/migrations/: 1_todo.sql
api/seeds/: 9991_addtransaction.sql
api/src/: main.rs
api/src/router/: create_transaction.rs
docs/: .env  CreateUser.md
load_tests/: loadtest_index.yml  loadtest_todo_item_flow.yml
migrations/: 20230317151514_create_todoitem_table.sql
migrations/2022-08-31-161108_create_blog_posts/: down.sql  up.sql
src/: config.rs  database.rs  lib.rs  main.rs  router.rs  routes.rs
src/domain/: mod.rs  todo_item.rs
src/domain/entities/: todo_item.rs
src/domain/value_objects/: priority_level.rs
src/router/: create_transaction.rs
src/routes/: create_todo_item.rs  delete_todo_item.rs  extractors.rs  get_todo_item.rs  request.rs  response.rs  response_builders.rs  update_todo_item.rs
src/routes/todo_item/: create_todo_item.rs  delete_todo_item.rs  get_todo_item.rs  update_todo_item.rs
src/routes/utils/: extractors.rs
tests/: common.rs  create_todo_item_tests.rs  delete_todo_item_tests.rs  get_todo_item_tests.rs  router_tests.rs  todo_item_tests.rs  update_todo_item_tests.rs
tests/load_tests/: Readme.md
xtask/: Cargo.toml
xtask/src/: main.rs
