[workspace]
members = ["xtask"]

[package]
name = "api"
description = "A cleanly designed Rust REST Api"
version = "0.1.0"
edition = "2021"
authors = ["Tristan J. Schoenmakers <tristansjh@gmail.com>"]
repository = "https://github.com/TristanJSchoenmakers/clean-architecture"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx  = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
uuid  = { version = "1.4.1", features = [ "v4", "serde" ] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
hyper = { version = "0.14.27", features = ["full"] }
pretty_assertions = "1.4.0"
tower = { version = "0.4.13", features = ["util"] }
